// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-component default-alias-import.js 1`] = `
Object {
  "from": "../components/button-default-class-export",
  "importedName": "namespace",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 7,
    },
    "start": Object {
      "column": 37,
      "line": 3,
    },
  },
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-class-export.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-class-export.js",
  "source": undefined,
}
`;

exports[`extract-component default-import.js 1`] = `
Object {
  "from": "../components/button-default-arrow-func",
  "importedName": "default",
  "loc": Object {
    "end": Object {
      "column": 65,
      "line": 3,
    },
    "start": Object {
      "column": 24,
      "line": 3,
    },
  },
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
  "source": undefined,
}
`;

exports[`extract-component kind-component.js 1`] = `
Object {
  "name": "Button",
}
`;

exports[`extract-component named-alias-import.js 1`] = `
Object {
  "from": "../components/button-named-arrow-func",
  "importedName": "Btn",
  "loc": undefined,
  "name": "Button",
  "repository": undefined,
  "request": undefined,
  "source": undefined,
}
`;

exports[`extract-component named-import.js 1`] = `
Object {
  "from": "../components/button-named-class",
  "importedName": "Button",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 7,
    },
    "start": Object {
      "column": 44,
      "line": 3,
    },
  },
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-class.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
  "source": undefined,
}
`;

exports[`extract-component node-modules.js 1`] = `
Object {
  "from": "theme-ui",
  "importedName": "Button",
  "loc": Object {
    "end": Object {
      "column": 2,
      "line": 26,
    },
    "start": Object {
      "column": 22,
      "line": 4,
    },
  },
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/system-ui/theme-ui/tree/master/dist/index.js",
    "docs": "https://github.com/system-ui/theme-ui/tree/master#readme",
    "issues": "https://github.com/system-ui/theme-ui/issues",
  },
  "request": "/Users/atanasster/component-controls/node_modules/@theme-ui/components/src/Button.js",
  "source": undefined,
}
`;

exports[`extract-component node-modules-source.js 1`] = `
Object {
  "from": "@component-controls/components",
  "importedName": "Subtitle",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 104,
    },
    "start": Object {
      "column": 23,
      "line": 91,
    },
  },
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/ui/components/dist/index.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/node_modules/@component-controls/components/dist/index.js",
  "source": undefined,
}
`;

exports[`extract-component non-existing-file.js 1`] = `
Object {
  "from": "./Button",
  "importedName": "Btn",
  "loc": undefined,
  "name": "Button",
  "repository": undefined,
  "request": undefined,
  "source": undefined,
}
`;

exports[`extract-component parameters-component.js 1`] = `
Object {
  "from": "../components/button-named-arrow-func",
  "importedName": "Button",
  "loc": Object {
    "end": Object {
      "column": 72,
      "line": 3,
    },
    "start": Object {
      "column": 31,
      "line": 3,
    },
  },
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
  "source": undefined,
}
`;

exports[`extract-component story-component.js 1`] = `
Object {
  "from": "../components/button-named-class",
  "importedName": "Button",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 7,
    },
    "start": Object {
      "column": 44,
      "line": 3,
    },
  },
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-class.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
  "source": undefined,
}
`;
